--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -7,8 +7,11 @@ color banner top : #F2EDE9
 * {
     font-family: 'Roboto', sans-serif;
 }
-body {
+nav {
     text-align: center;
+}
+h1 {
+    display: inline;
 }
 .root {
     float: left;
@@ -55,5 +58,74 @@ body {
     height: auto;
     position: relative;
     bottom: -1px;
+    display: inline-block;
+}
+.parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    align-items: center;
+    }
+    
+.div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 1 / 3 / 2 / 4; }
+.div4 { grid-area: 2 / 1 / 3 / 2; }
+.div5 { grid-area: 2 / 2 / 3 / 3; }
+.div6 { grid-area: 2 / 3 / 3 / 4; }
+.div7 { grid-area: 3 / 1 / 4 / 2; }
+.div8 { grid-area: 3 / 2 / 4 / 3; }
+.div9 { grid-area: 3 / 3 / 4 / 4; }
+.div10 { grid-area: 4 / 1 / 5 / 2; }
+.div11 { grid-area: 4 / 2 / 5 / 3; }
+.div12 { grid-area: 4 / 3 / 5 / 4; }
+
+.star {
+    width: 2%;
+    height: auto;
+    display: inline-block;
+    padding: 0px;
+}
+.color-choice {
+    width: 2%;
+    height: auto;
+    display: inline-block;
+    padding-right: 2px;
+    border-radius: 50%;
+}
+.bolder {
+    font-weight: bolder;
+}
+.line {
+    text-decoration: line-through;
+}
+.size-choice {
+    width: 2%;
+    height: auto;
+    display: inline-block;
+    padding-right: 2px;
+    border-radius: 50%;
+    background-color: rgb(182, 182, 182);
+}
+.underline {
+    text-decoration: underline;
+    display: inline;
+}
+.next {
+    width: 1%;
+    height: auto;
+    display: inline-block;
+}
+.size-selector {
+    display: inline;
+    width: 5%;
+    height: auto;
+    border: 1px solid grey;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+aside {
     display: inline-block;
 }
