--- a/src/scss/_config.sass
+++ b/src/scss/_config.sass
@@ -1,5 +1,3 @@
-$color-main-banner: #F2EDE9
 $text-color: #222
-$primary-color: #f68773
-$color-second-banner: #999
-$font-stack: roboto, Helvetica, sans-serif
+$main-color: #F2EDE9
+$border: 5px solid #ccc
