--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,43 +2,79 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+.container {
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
 }
 
 header {
-  border: 2px solid #ccc;
-  height: 80px;
+  display: flex;
+  min-height: 70px;
+  background-color: #F2EDE9;
+  width: 100%;
 }
 header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  height: 70px;
+}
+header nav #logo {
+  width: 30%;
+  margin-left: 20px;
+  background-color: #F2EDE9;
+}
+header nav #logo img {
+  display: block;
+  margin-top: 20px;
+  margin-left: 19%;
+  float: left;
+  width: 27%;
 }
 header nav ul {
+  font-size: 16px;
+  padding-top: 20px;
   display: flex;
   list-style-type: none;
+  width: inherit;
+  justify-content: space-between;
 }
-header nav li {
+header nav ul li {
   display: flex;
+  padding: 13px;
 }
-header nav li:first-child {
+header nav ul li:first-child {
   margin-left: 25%;
 }
-header nav li:last-child {
+header nav ul li:last-child {
   margin-right: 35%;
 }
-header nav a {
+header nav ul a {
   color: #222;
+  text-decoration: none;
 }
-header nav a:hover {
+header nav ul a:hover {
   transform: scale(1.04);
 }
-header form {
-  margin-right: 1%;
-  float: left;
+header nav form {
+  margin-right: 14%;
 }
-header ul {
+header nav .thumbnail {
+  height: 40px;
+  width: 40px;
+}
+header nav .thumbnail {
+  font-size: 16px;
+  padding-top: 20px;
   display: flex;
-  align-items: center;
+  list-style-type: none;
+  width: inherit;
+  align-items: right;
   justify-content: space-between;
 }
 
