--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,58 +1,107 @@
-$text-color: #222;
+@import 'config';
+// @import 'utility';
 
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-header{
+.container{
+    width:100%;
+    margin:auto;
+    overflow:hidden;
 
-    border: 2px solid #ccc;
-    height: 80px;
+}
+
+
+
+
+header{
+    display: flex;
+    min-height: 70px;
+    background-color: $main-color ;
+    width: 100%;
 
     nav{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        width: 100%;
+        height: 70px;
+
+        #logo{
+            width: 30%;
+            margin-left: 20px;
+            background-color: $main-color ;
+    
+            img{
+                display: block;
+                margin-top: 20px;
+                margin-left: 19%;
+                float: left;
+                width: 27%;
+            }
+        }
 
         ul{
+            font-size: 16px;
+            padding-top: 20px;
             display: flex;
             list-style-type: none;
-        }
+            width: inherit;
+          //  align-items: center;
+            justify-content: space-between;
 
-        li{
-            display: flex;
-        }
+            
+            li{
+                display: flex;
+                padding: 13px;
+                
+            }
 
-        li:first-child{
-            margin-left: 25%;
+            li:first-child{
+                margin-left: 25%;
+            }
+            
+            li:last-child{
+                margin-right: 35%;
+            }
+
+            a {
+                color: $text-color;
+                text-decoration: none;
+            }
+
+            a:hover {
+                transform: scale(1.04);
+            }
         }
         
-        li:last-child{
-            margin-right: 35%;
+        form{
+            margin-right: 14%;
         }
 
-        a {
-            color: $text-color;
+        .thumbnail{
+            height: 40px;
+            width: 40px;
         }
 
-        a:hover {
-            transform: scale(1.04);
+        .thumbnail{
+            font-size: 16px;
+            padding-top: 20px;
+            display: flex;
+            list-style-type: none;
+            width: inherit;
+           align-items: right;
+            justify-content: space-between;
         }
+        
     }
 
-    form{
-        margin-right: 1%;
-        float: left;
-    }
 
-    ul{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
 }
 
 
