--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,80 +2,78 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 .container {
   width: 100%;
   margin: auto;
   overflow: hidden;
+  font-family: "Roboto", sans-serif;
 }
 
-header {
-  display: flex;
-  min-height: 70px;
+header .topnav {
   background-color: #F2EDE9;
   width: 100%;
 }
-header nav {
+header .topnav .logo {
+  padding: 40px;
+  line-height: 90px;
+  margin-top: 20px;
+}
+header .topnav nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 70px;
+  height: 90px;
 }
-header nav #logo {
-  width: 30%;
-  margin-left: 20px;
-  background-color: #F2EDE9;
-}
-header nav #logo img {
-  display: block;
-  margin-top: 20px;
-  margin-left: 19%;
-  float: left;
-  width: 27%;
-}
-header nav ul {
+header .topnav nav ul {
   font-size: 16px;
-  padding-top: 20px;
   display: flex;
-  list-style-type: none;
-  width: inherit;
+  width: auto;
   justify-content: space-between;
 }
-header nav ul li {
+header .topnav nav ul li {
   display: flex;
   padding: 13px;
 }
-header nav ul li:first-child {
-  margin-left: 25%;
-}
-header nav ul li:last-child {
-  margin-right: 35%;
-}
-header nav ul a {
+header .topnav nav ul a {
   color: #222;
   text-decoration: none;
 }
-header nav ul a:hover {
+header .topnav nav ul a:hover {
   transform: scale(1.04);
 }
-header nav form {
-  margin-right: 14%;
+header .topnav .icons-socials {
+  float: right;
+  margin: 2%;
+  transform: scale(0.7);
 }
-header nav .thumbnail {
-  height: 40px;
-  width: 40px;
+header .topnav .icons-socials a {
+  margin: 8px;
 }
-header nav .thumbnail {
-  font-size: 16px;
-  padding-top: 20px;
-  display: flex;
-  list-style-type: none;
-  width: inherit;
-  align-items: right;
-  justify-content: space-between;
+header input {
+  border-radius: 15px;
+  width: 200px;
+  border: none;
+  height: 30px;
+  text-indent: 15px;
+  background-color: #fff;
+}
+header input::placeholder {
+  opacity: 0.4;
+}
+
+@media screen and (min-width: 768px) {
+  #menu-btn {
+    display: none;
+  }
+
+  .topnav nav ul {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
