--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -6,103 +6,100 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
 
 .container{
     width:100%;
     margin:auto;
     overflow:hidden;
-
+    font-family: 'Roboto', sans-serif;
 }
 
 
 
 
 header{
-    display: flex;
-    min-height: 70px;
-    background-color: $main-color ;
-    width: 100%;
+    .topnav{
 
-    nav{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        background-color: $main-color;
         width: 100%;
-        height: 70px;
-
-        #logo{
-            width: 30%;
-            margin-left: 20px;
-            background-color: $main-color ;
-    
-            img{
-                display: block;
-                margin-top: 20px;
-                margin-left: 19%;
-                float: left;
-                width: 27%;
-            }
+        
+        .logo{
+            padding: 40px;
+            line-height: 90px;
+            margin-top: 20px;
         }
-
-        ul{
-            font-size: 16px;
-            padding-top: 20px;
+        
+        nav{
             display: flex;
-            list-style-type: none;
-            width: inherit;
-          //  align-items: center;
+            align-items: center;
             justify-content: space-between;
+            height: 90px;
 
-            
-            li{
+        
+            ul{
+                font-size: 16px;
                 display: flex;
-                padding: 13px;
+                width: auto;
+                justify-content: space-between;
+
                 
-            }
+                li{
+                    display: flex;
+                    padding: 13px;
+                    
+                }
 
-            li:first-child{
-                margin-left: 25%;
-            }
-            
-            li:last-child{
-                margin-right: 35%;
-            }
+                a {
+                    color: $text-color;
+                    text-decoration: none;
+                }
 
-            a {
-                color: $text-color;
-                text-decoration: none;
-            }
-
-            a:hover {
-                transform: scale(1.04);
+                a:hover {
+                    transform: scale(1.04);
+                }
             }
         }
         
-        form{
-            margin-right: 14%;
-        }
 
-        .thumbnail{
-            height: 40px;
-            width: 40px;
-        }
+        .icons-socials{
+            float: right;
+            margin: 2%;
+            transform: scale(0.70);
 
-        .thumbnail{
-            font-size: 16px;
-            padding-top: 20px;
-            display: flex;
-            list-style-type: none;
-            width: inherit;
-            align-items: right;
-            justify-content: space-between;
+            a{
+                margin: 8px;
+            }
         }
+    }
+    
+    input{
+        border-radius: 15px;
+        width: 200px;
+        border: none;
+        height: 30px;
+        text-indent: 15px;
+        background-color: #fff;
+
+        &::placeholder{
+            opacity: 0.4;
+        }
+    }
         
     }
 
 
-}
 
 
-
+    
+    @media screen and (min-width: 768px){
+        #menu-btn{
+            display: none;
+        }
+        .topnav nav ul{
+            display: none;
+        }
+    }
