--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,281 +1,216 @@
-
 $cercle: 25px;
-$color1:blue;
-$color2: brown; 
+$color1: blue;
+$color2: brown;
 $color3: green;
-$color_size:lightgrey;
-$borderCercle:20px;
-$borderColor:grey;
+$color_size: lightgrey;
+$borderCercle: 20px;
+$borderColor: grey;
 
-
-
-html{
-
-    
-    main{
-
+html {
+    main {
         width: 75%;
         margin-left: auto;
         margin-right: auto;
-       
 
-        article{
-
-            section{
-
-                .grid-container{
+        article {
+            section {
+                .grid-container {
                     display: grid;
                     align-content: space-evenly;
                     grid-template-columns: auto auto;
                     grid-gap: 5%;
                     background-color: yellow;
 
-                    .image{
-
-                        .imageG{
-
-                            img{
-                            max-width: 100%;
-                            margin-bottom: 4%;
-                            
-                          
+                    .image {
+                        display: inline;
+                        list-style: none;
+                        margin: 10px;
+                        .imageG {
+                            img {
+                                max-width: 100%;
+                                margin-bottom: 4%;
                             }
                         }
-                        display: inline;
-                        list-style: none; 
-                        margin: 10px;
 
-                        .imageS{
-
-                            img{
-
+                        .imageS {
+                            img {
                                 max-width: 20%;
                                 margin-left: 2%;
                             }
                         }
-
                     }
 
-                    .review{
-                        .color{
-                                
-                                    
-                            .color1{
-                                                
-                                height: $cercle;
-                                    width: $cercle;
-                                    border-radius: $borderCercle;
-                                    background-color: $color1;
-                                    list-style: none; 
-                                    display: inline-block;
-                                    border: grey 3px Solid ;
-                                    border:white 5px Solid;
-                                    
-
-
-                                            }
-
-
-                            .color2{
-                                        height: $cercle;
-                                        width: $cercle;
-                                        border-radius: $borderCercle;
-                                        background-color: $color2;
-                                        list-style: none; 
-                                        display: inline-block;
-                                        border: grey 3px Solid ;
-                                        border:white 5px Solid;
-                                        outline:radius 1px solid red;
-
-                                            }
-
-                            .color3{
-                                        height: $cercle;
-                                        width: $cercle;
-                                        border-radius: $borderCercle;
-                                        background-color: $color3;
-                                        list-style: none; 
-                                        display: inline-block;
-                                        border: grey 3px Solid ;
-                                        border:white 5px Solid;
-                                        }
-                                
-                            
-                        }
-
-
-
-                        .size{
-
-                            .small{
+                    .review {
+                        .color {
+                            .color1 {
                                 height: $cercle;
                                 width: $cercle;
                                 border-radius: $borderCercle;
-                                background-color: $color_size;
-                                text-align: center;
-                                text-transform: capitalize;
-                                list-style: none; 
-                                display: inline-block;
-                                vertical-align: middle;
-
-                            }
-
-
-                            .medium{
-                                height: $cercle;
-                                width: $cercle;
-                                border-radius: $borderCercle;
-                                background-color: $color_size;
-                                text-align: center;
-                                text-transform: capitalize;
-                                list-style: none; 
-                                display: inline-block;
-                                vertical-align: middle;
-
-                            }
-
-                            .large{
-                                height: $cercle;
-                                width: $cercle;
-                                border-radius: $borderCercle;
-                                background-color: $color_size;
-                                text-align: center;
-                                text-transform: capitalize;
-                                list-style: none; 
-                                display: inline-block;
-                                vertical-align: middle;
-                                
-                            }
-                        }
-
-                        .media-icons{
-
-                                ul{
-
-                                    li{
-                                        display: inline;
-                                        list-style: none; 
-                                        margin: 10px;
-
-                                    }
-                                }
-
-                        }
-                    }
-
-                }
-
-
-            }
-
-            section{
-
-                .description{
-                    background-color: #657845;
-                    
-                    
-                    
-                        ul{
-                            li{
+                                background-color: $color1;
                                 list-style: none;
-                                text-transform: capitalize;
                                 display: inline-block;
+                                border: grey 3px Solid;
+                                border: white 5px Solid;
+                            }
+
+                            .color2 {
+                                height: $cercle;
+                                width: $cercle;
+                                border-radius: $borderCercle;
+                                background-color: $color2;
+                                list-style: none;
+                                display: inline-block;
+                                border: grey 3px Solid;
+                                border: white 5px Solid;
+                                outline: radius 1px solid red;
+                            }
+
+                            .color3 {
+                                height: $cercle;
+                                width: $cercle;
+                                border-radius: $borderCercle;
+                                background-color: $color3;
+                                list-style: none;
+                                display: inline-block;
+                                border: grey 3px Solid;
+                                border: white 5px Solid;
                             }
                         }
-                }
 
+                        .size {
+                            .small {
+                                height: $cercle;
+                                width: $cercle;
+                                border-radius: $borderCercle;
+                                background-color: $color_size;
+                                text-align: center;
+                                text-transform: capitalize;
+                                list-style: none;
+                                display: inline-block;
+                                vertical-align: middle;
+                            }
+
+                            .medium {
+                                height: $cercle;
+                                width: $cercle;
+                                border-radius: $borderCercle;
+                                background-color: $color_size;
+                                text-align: center;
+                                text-transform: capitalize;
+                                list-style: none;
+                                display: inline-block;
+                                vertical-align: middle;
+                            }
+
+                            .large {
+                                height: $cercle;
+                                width: $cercle;
+                                border-radius: $borderCercle;
+                                background-color: $color_size;
+                                text-align: center;
+                                text-transform: capitalize;
+                                list-style: none;
+                                display: inline-block;
+                                vertical-align: middle;
+                            }
+                        }
+
+                        .media-icons {
+                            ul {
+                                li {
+                                    display: inline;
+                                    list-style: none;
+                                    margin: 10px;
+                                }
+                            }
+                        }
+                    }
+                }
             }
 
+            section {
+                .description {
+                    background-color: #657845;
+                    ul {
+                        li {
+                            list-style: none;
+                            text-transform: capitalize;
+                            display: inline-block;
+                        }
+                    }
+                }
+            }
 
-            section{
-                .grid-container-2{
+            section {
+                .grid-container-2 {
                     background-color: olive;
                     display: grid;
                     align-content: space-evenly;
                     grid-template-columns: auto auto;
                     grid-gap: 5%;
-
-                        .presentation{
-
-                            h2{text-transform:capitalize;}
-                            .text{
-                                p{
-
-                                }
-                            }
-                            .features{
-                                h2{}
-                                ul{
-                                    li{}
-                                }
-
+                    .presentation {
+                        h2 {
+                            text-transform: capitalize;
+                        }
+                        .text {
+                            p {
                             }
                         }
-            
-
-                        .image{}
-                    }
-
-
-                 }
-
-                 section{
-
-
-                    .grid-container-3{
-
-                        background-color: orangered;
-                        display: grid;
-                        align-content: space-evenly;
-                        grid-template-columns: auto auto auto auto;
-                        
-
-                        figure{
-                            img{
-                                width: 125px;
+                        .features {
+                            h2 {
                             }
-                            figcaptation{
-                                p{
-
+                            ul {
+                                li {
                                 }
-
                             }
                         }
                     }
-                 }
 
-                 section{
+                    .image {
+                        margin: auto;
+                        img {
+                        }
+                    }
+                }
+            }
 
+            section {
+                .grid-container-3 {
+                    background-color: orangered;
+                    display: grid;
+                    align-content: space-evenly;
+                    grid-template-columns: auto auto auto auto;
 
-                    .grid-container-4{
-
-                        background-color:blueviolet;
-                        display: grid;
-                        align-content: space-evenly;
-                        grid-template-columns: auto auto auto auto;
-                        
-
-                        figure{
-                            img{
-                                width: 125px;
-                            }
-                            figcaptation{
-                                p{
-
-                                }
-
+                    figure {
+                        img {
+                            width: 125px;
+                        }
+                        figcaptation {
+                            p {
                             }
                         }
                     }
-                 }
+                }
+            }
 
+            section {
+                .grid-container-4 {
+                    background-color: blueviolet;
+                    display: grid;
+                    align-content: space-evenly;
+                    grid-template-columns: auto auto auto auto;
 
-
-
-
-
+                    figure {
+                        img {
+                            width: 125px;
+                        }
+                        figcaptation {
+                            p {
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
-
 }
-
