--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -14,29 +14,35 @@ h1 {
     display: inline;
 }
 .root {
-    width: 57%;
+    width: 1400px;
+    padding-top: 50px;
 }
 .circle {
-    width: 0.5%;
+    width: 5px;
     height: auto;
     position: relative;
     top: -3px;
 }
 .section-title {
     display: inline-block;
-    width:  53%;
-    float: left;
+    position: relative;
+    left: 350px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .parameters {
     display: inline-block;
-    width:  90%;
-    float: right;
+    position: relative;
+    width:  1500px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 250px;
 }
 .parameters1 {
     padding-right: 50px;
 }
 .parameters2 {
-    padding-right:  50px;
+    padding-right:  0px;
 }
 .down-arrow {
     width: 1%;
@@ -71,7 +77,7 @@ h1 {
     grid-row-gap: 50px;
     width: 40%;
     padding-left: 25%;
-    
+    float: left;
 }
     
 .div1 { grid-area: 1 / 1 / 2 / 2;
@@ -103,7 +109,7 @@ h1 {
     width: 5%;
     height: auto;
     display: inline-block;
-    padding: 0px;
+    padding-bottom: 10px;
 }
 .color-choice {
     width: 5%;
@@ -113,6 +119,7 @@ h1 {
 }
 .bold {
     font-weight: bolder;
+    padding-bottom: 10px;
 }
 .line {
     text-decoration: line-through;
@@ -144,20 +151,35 @@ h1 {
 }
 .grey-text {
     color: gray;
+    padding-bottom: 10px;
 }
 .black-text {
     color: black;
     font-weight: bold;
+    padding-bottom: 10px;
 }
 .prix {
     color: grey;
+    padding-bottom: 5px;
 }
 .nouveau-prix {
     color: black;
+    padding-left: 5px;
 }
 .color {
     width: 1%;
     height: auto;
     padding-right: 2px;
     border-radius: 50%;
+}
+.item {
+    padding-bottom: 20px;
+}
+aside {
+    float: left;
+    padding-left: 20px;
+}
+.page-number {
+    /*Il faut que le numéro de page reste en bas*/
+    float: none;
 }
