--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,6 +52,9 @@ a {
     flex: 2;
   }
 }
+.header__list {
+  list-style: none;
+}
 @media screen and (min-width: 968px) {
   .header {
     display: flex;
@@ -64,12 +67,6 @@ a {
 .header__search {
   display: none;
 }
-.header__icons, .header__list {
-  display: flex;
-}
-.header__list {
-  list-style: none;
-}
 .header__item {
   margin-right: 1rem;
 }
@@ -81,6 +78,29 @@ a {
   height: 24px;
   width: 24px;
   margin-left: 1rem;
+}
+.header__icon input {
+  height: 24px;
+  width: 24px;
+  display: inline-block;
+  margin: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+.header__icon--menu {
+  background-color: cyan;
+}
+.header__icon--menu .hamburger > div {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__icons, .header__list {
+  display: flex;
 }
 .header__search {
   max-height: 24px;
