adding hamburger, animated mobile menu still to implement

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,12 +1,14 @@
 * {
     text-decoration: none;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.4;
   }
 
   a{
