--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,14 @@
 * {
   text-decoration: none;
   list-style: none;
-  font-family: "Roboto", sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.4;
 }
 
 a {
@@ -87,18 +89,6 @@ a {
   cursor: pointer;
   opacity: 0;
 }
-.header__icon--menu {
-  background-color: cyan;
-}
-.header__icon--menu .hamburger > div {
-  position: relative;
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 .header__icons, .header__list {
   display: flex;
 }
@@ -113,6 +103,73 @@ a {
   }
 }
 
+.header__icon {
+  /*Hamburger Background*/
+}
+.header__icon--menuwrap {
+  width: 24px;
+  height: 24px;
+  background: #fff;
+  display: flex;
+  /* Hamburger Line */
+  /* Hamburger Lines - Top & Bottom */
+  /* Moves Line Down */
+  /* Toggler Animation */
+  /* Turns Lines Into X */
+  /* Rotate On Hover When Checked */
+  /*      left: 40px;
+        .toggler > div::after{
+        left: 0;
+      }
+        .hamburger > div::after{
+        left: 0;
+      }
+  */
+}
+.header__icon--menuwrap--toggler {
+  cursor: pointer;
+  opacity: 1;
+  padding: 0;
+}
+.header__icon--menuwrap--hamburger {
+  padding: 0;
+  margin-left: -25px;
+  margin-top: 10px;
+}
+.header__icon--menuwrap--hamburger > div {
+  position: relative;
+  flex: none;
+  width: 100%;
+  height: 2px;
+  background: #222;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  transition: all 0.4s ease;
+}
+.header__icon--menuwrap--hamburger > div::before, .header__icon--menuwrap--hamburger > div::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -9px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+.header__icon--menuwrap--hamburger > div::after {
+  top: 9px;
+}
+.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div {
+  transform: rotate(135deg);
+}
+.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:before, .header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+.header__icon--menuwrap--toggler:checked:hover + .header__icon--menuwrap--hamburger > div {
+  transform: rotate(225deg);
+}
+
 @media screen and (max-width: 968px) {
   .header {
     background: #fff;
@@ -121,11 +178,27 @@ a {
 .header__item:hover {
   transform: scale(1.04);
 }
-.header__icon--search, .header__icon--menu {
+.header__icon--menuwrap--hamburger {
   display: block;
 }
 @media screen and (min-width: 968px) {
-  .header__icon--search, .header__icon--menu {
+  .header__icon--menuwrap--hamburger {
+    display: none;
+  }
+}
+.header__icon--menuwrap--toggler {
+  display: block;
+}
+@media screen and (min-width: 968px) {
+  .header__icon--menuwrap--toggler {
+    display: none;
+  }
+}
+.header__icon--search {
+  display: block;
+}
+@media screen and (min-width: 968px) {
+  .header__icon--search {
     display: none;
   }
 }
