--- a/src/scss/_state.scss
+++ b/src/scss/_state.scss
@@ -11,13 +11,28 @@
     }
 
     &__icon {
-        &--search, &--menu {
+        &--menuwrap{
+          &--hamburger{
+            display: block;
+            @media screen and (min-width: 968px) {
+              display: none;
+            }
+          }
+
+          &--toggler{
+            
+            display: block;
+            @media screen and (min-width: 968px) {
+              display: none;
+            }
+          }
+        }
+        
+        &--search{
           display: block;
           @media screen and (min-width: 968px) {
             display: none;
           }
          }
         }
-
-
 }
