--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,113 +1,398 @@
-html main {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto; }
-  html main article section .grid-container {
-    display: grid;
-    align-content: space-evenly;
-    grid-template-columns: auto auto;
-    grid-gap: 5%; }
-    html main article section .grid-container .image {
-      display: inline;
-      list-style: none;
-      margin: 10px; }
-      html main article section .grid-container .image .imageG img {
-        max-width: 100%;
-        margin-bottom: 4%; }
-      html main article section .grid-container .image .imageS img {
-        max-width: 20%;
-        margin-left: 2%; }
-    html main article section .grid-container .review .color .color1 {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: #ffee00;
-      list-style: none;
-      display: inline-block;
-      border: grey 3px Solid;
-      border: white 5px Solid; }
-    html main article section .grid-container .review .color .color2 {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: brown;
-      list-style: none;
-      display: inline-block;
-      border: grey 3px Solid;
-      border: white 5px Solid;
-      outline: radius 1px solid red; }
-    html main article section .grid-container .review .color .color3 {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: green;
-      list-style: none;
-      display: inline-block;
-      border: grey 3px Solid;
-      border: white 5px Solid; }
-    html main article section .grid-container .review .size .small {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: lightgrey;
+@font-face {
+  font-family: "Roboto";
+  src: url("../font/Roboto/Roboto-Regular.ttf"); }
+
+* {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  box-sizing: border-box; }
+
+html body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.4; }
+  html body main {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto; }
+    html body main article section .grid-container {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto;
+      grid-gap: 5%; }
+      html body main article section .grid-container .image {
+        display: inline;
+        list-style: none;
+        margin: 10px; }
+        html body main article section .grid-container .image .imageG img {
+          max-width: 100%;
+          margin-bottom: 4%; }
+        html body main article section .grid-container .image .imageS img {
+          max-width: 20%;
+          margin-left: 2%; }
+      html body main article section .grid-container .review h2 {
+        text-transform: capitalize; }
+      html body main article section .grid-container .review p span {
+        text-decoration: line-through; }
+      html body main article section .grid-container .review .color .color1 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #6f849c;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid; }
+      html body main article section .grid-container .review .color .color2 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #cfa58f;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid;
+        outline: radius 1px solid red; }
+      html body main article section .grid-container .review .color .color3 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #f06292;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid; }
+      html body main article section .grid-container .review .size .small {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html body main article section .grid-container .review .size .medium {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html body main article section .grid-container .review .size .large {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html body main article section .grid-container .review .media-icons ul li {
+        display: inline;
+        list-style: none;
+        margin: 10px; }
+    html body main article section .description ul {
+      margin-left: auto;
+      margin-right: auto;
       text-align: center;
-      text-transform: capitalize;
-      list-style: none;
-      display: inline-block;
-      vertical-align: middle; }
-    html main article section .grid-container .review .size .medium {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: lightgrey;
+      border-top: 1px solid lightgray;
+      border-bottom: 1px solid lightgrey; }
+      html body main article section .description ul li {
+        list-style: none;
+        text-transform: capitalize;
+        display: inline-block;
+        margin: 10px;
+        padding-left: 2em; }
+    html body main article section .grid-container-2 {
+      display: grid;
+      grid-template-columns: auto auto;
+      line-height: 25px;
+      margin-left: 1%; }
+      html body main article section .grid-container-2 .presentation h2 {
+        text-transform: capitalize; }
+      html body main article section .grid-container-2 .presentation .text p {
+        text-align: justify; }
+      html body main article section .grid-container-2 .features h2 {
+        text-transform: capitalize; }
+      html body main article section .grid-container-2 .features ul li {
+        text-align: justify; }
+      html body main article section .grid-container-2 .image img {
+        max-width: 100%; }
+    html body main article section h2 {
       text-align: center;
-      text-transform: capitalize;
-      list-style: none;
-      display: inline-block;
-      vertical-align: middle; }
-    html main article section .grid-container .review .size .large {
-      height: 25px;
-      width: 25px;
-      border-radius: 20px;
-      background-color: lightgrey;
-      text-align: center;
-      text-transform: capitalize;
-      list-style: none;
-      display: inline-block;
-      vertical-align: middle; }
-    html main article section .grid-container .review .media-icons ul li {
-      display: inline;
-      list-style: none;
-      margin: 10px; }
-  html main article section .description {
-    background-color: #657845; }
-    html main article section .description ul li {
-      list-style: none;
-      text-transform: capitalize;
-      display: inline-block; }
+      text-transform: capitalize; }
+    html body main article section h3 {
+      text-align: center; }
+    html body main article section .grid-container-3 {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto auto auto; }
+      html body main article section .grid-container-3 figure img {
+        width: 125px; }
+      html body main article section .grid-container-3 figure figcaption p span {
+        text-decoration: line-through; }
+    html body main article section .grid-container-4 {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto auto auto; }
+      html body main article section .grid-container-4 figure img {
+        width: 125px; }
+      html body main article section .grid-container-4 figure figcaption p span {
+        text-decoration: line-through; }
+
+@media only screen and (max-device-width: 767px) {
+  html main article section .grid-container .image .imageG img {
+    max-width: 70%; }
+  html main article section .grid-container .image .imageS img {
+    max-width: 20%;
+    margin-left: 2%; }
+  html main article section .grid-container .review .color .color1 {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: #6f849c;
+    list-style: none;
+    display: inline-block;
+    border: grey 3px Solid;
+    border: white 5px Solid; }
+  html main article section .grid-container .review .color .color2 {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: #cfa58f;
+    list-style: none;
+    display: inline-block;
+    border: grey 3px Solid;
+    border: white 5px Solid;
+    outline: radius 1px solid red; }
+  html main article section .grid-container .review .color .color3 {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: #f06292;
+    list-style: none;
+    display: inline-block;
+    border: grey 3px Solid;
+    border: white 5px Solid; }
+  html main article section .grid-container .review .size .small {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: lightgrey;
+    text-align: center;
+    text-transform: capitalize;
+    list-style: none;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px; }
+  html main article section .grid-container .review .size .medium {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: lightgrey;
+    text-align: center;
+    text-transform: capitalize;
+    list-style: none;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px; }
+  html main article section .grid-container .review .size .large {
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    background-color: lightgrey;
+    text-align: center;
+    text-transform: capitalize;
+    list-style: none;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px; }
+  html main article section .grid-container .review .media-icons ul li {
+    display: inline;
+    list-style: none;
+    margin: 10px; }
+  html main article section .description ul {
+    margin-top: 50px; }
   html main article section .grid-container-2 {
     display: grid;
-    align-content: space-evenly;
-    grid-template-columns: auto auto;
-    grid-gap: 5%;
-    line-height: 25px; }
+    grid-template-columns: auto;
+    line-height: 25px;
+    margin-left: 1%; }
     html main article section .grid-container-2 .presentation h2 {
       text-transform: capitalize; }
     html main article section .grid-container-2 .presentation .text p {
       text-align: justify; }
+    html main article section .grid-container-2 .features h2 {
+      text-transform: capitalize; }
+    html main article section .grid-container-2 .features ul li {
+      text-align: justify; }
     html main article section .grid-container-2 .image img {
-      max-width: 100%; }
+      max-width: 75%; }
+  html main article section h2 {
+    text-align: center;
+    text-transform: capitalize; }
+  html main article section h3 {
+    text-align: center; }
   html main article section .grid-container-3 {
-    background-color: orangered;
     display: grid;
     align-content: space-evenly;
-    grid-template-columns: auto auto auto auto; }
+    grid-template-columns: auto auto; }
     html main article section .grid-container-3 figure img {
-      width: 125px; }
+      width: 80%; }
+    html main article section .grid-container-3 figure figcaption p span {
+      text-decoration: line-through; }
   html main article section .grid-container-4 {
-    background-color: blueviolet;
     display: grid;
     align-content: space-evenly;
-    grid-template-columns: auto auto auto auto; }
+    grid-template-columns: auto auto; }
     html main article section .grid-container-4 figure img {
-      width: 125px; }
+      width: 50%; }
+    html main article section .grid-container-4 figure figcaption p span {
+      text-decoration: line-through; } }
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  html main {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto; }
+    html main article section .grid-container {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto;
+      grid-gap: 5%; }
+      html main article section .grid-container .image {
+        display: inline;
+        list-style: none;
+        margin: 10px; }
+        html main article section .grid-container .image .imageG img {
+          max-width: 100%;
+          margin-bottom: 4%; }
+        html main article section .grid-container .image .imageS img {
+          max-width: 20%;
+          margin-left: 2%; }
+      html main article section .grid-container .review h2 {
+        text-transform: capitalize; }
+      html main article section .grid-container .review p span {
+        text-decoration: line-through; }
+      html main article section .grid-container .review .color .color1 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #6f849c;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid; }
+      html main article section .grid-container .review .color .color2 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #cfa58f;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid;
+        outline: radius 1px solid red; }
+      html main article section .grid-container .review .color .color3 {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: #f06292;
+        list-style: none;
+        display: inline-block;
+        border: grey 3px Solid;
+        border: white 5px Solid; }
+      html main article section .grid-container .review .size .small {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html main article section .grid-container .review .size .medium {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html main article section .grid-container .review .size .large {
+        height: 20px;
+        width: 20px;
+        border-radius: 20px;
+        background-color: lightgrey;
+        text-align: center;
+        text-transform: capitalize;
+        list-style: none;
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 12px; }
+      html main article section .grid-container .review .media-icons ul li {
+        display: inline;
+        list-style: none;
+        margin: 10px; }
+    html main article section .description ul {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      border-top: 1px solid lightgray;
+      border-bottom: 1px solid lightgrey; }
+      html main article section .description ul li {
+        list-style: none;
+        text-transform: capitalize;
+        display: inline-block;
+        margin: 10px;
+        padding-left: 2em; }
+    html main article section .grid-container-2 {
+      display: grid;
+      grid-template-columns: auto auto;
+      line-height: 25px;
+      margin-left: 1%; }
+      html main article section .grid-container-2 .presentation h2 {
+        text-transform: capitalize; }
+      html main article section .grid-container-2 .presentation .text p {
+        text-align: justify; }
+      html main article section .grid-container-2 .features h2 {
+        text-transform: capitalize; }
+      html main article section .grid-container-2 .features ul li {
+        text-align: justify; }
+      html main article section .grid-container-2 .image img {
+        max-width: 100%; }
+    html main article section h2 {
+      text-align: center;
+      text-transform: capitalize; }
+    html main article section h3 {
+      text-align: center; }
+    html main article section .grid-container-3 {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto; }
+      html main article section .grid-container-3 figure img {
+        width: 125px; }
+      html main article section .grid-container-3 figure figcaption p span {
+        text-decoration: line-through; }
+    html main article section .grid-container-4 {
+      display: grid;
+      align-content: space-evenly;
+      grid-template-columns: auto auto; }
+      html main article section .grid-container-4 figure img {
+        width: 125px; }
+      html main article section .grid-container-4 figure figcaption p span {
+        text-decoration: line-through; } }
