--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,11 +3,11 @@
   list-style: none;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
   line-height: 1.4;
 }
 
@@ -177,11 +177,12 @@ a {
   transition: opacity 0.4s ease 0.4s;
 }
 .header__icon--menuwrap--menu {
-  position: absolute;
-  top: 20%;
+  position: fixed;
+  top: 0;
   left: 5%;
   width: 80%;
   height: 100%;
+  margin: auto;
   visibility: hidden;
   overflow: hidden;
   display: flex;
@@ -203,10 +204,11 @@ a {
 .header__icon--menuwrap--menu > div > div {
   text-align: left;
   max-width: 90vw;
-  max-height: 80vh;
+  max-height: 80vw;
   margin-bottom: 180px;
   opacity: 0;
   transition: opacity 0.4s ease;
+  margin-left: 30px;
 }
 .header__icon--menuwrap--menu > div > div h1 {
   color: #222;
@@ -223,10 +225,67 @@ a {
   color: #999;
 }
 
+.footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 350px;
+  border: solid;
+  justify-content: center;
+}
+.footer .up {
+  position: relative;
+  width: 100%;
+  display: flex;
+  height: 200px;
+  justify-content: center;
+}
+.footer .down {
+  width: 100%;
+  display: flex;
+  height: 150px;
+}
+.footer__contact {
+  color: #999;
+  height: 200px;
+  margin-right: 10%;
+}
+.footer__list {
+  position: relative;
+  height: 70%;
+  font-size: 12px;
+  margin: 0 3%;
+  color: #999;
+}
+.footer__list h3 {
+  margin-bottom: 40px;
+  margin-right: 90px;
+  color: #000;
+}
+.footer__list > ul > li {
+  margin-bottom: 15px;
+}
+.footer__icon {
+  position: relative;
+  color: #999;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.footer__icon > div {
+  align-self: center;
+  margin-right: 15%;
+}
+.footer__icon ul > li {
+  display: inline-block;
+}
+.footer__icon a {
+  color: #999;
+}
+
 @media screen and (max-width: 968px) {
   .header {
     background: #fff;
-    color: #ccc;
   }
 }
 .header__item:hover {
@@ -238,9 +297,6 @@ a {
     display: none;
   }
 }
-.header__icon--menuwrap--hamburger > div {
-  background-color: #ccc;
-}
 .header__icon--search {
   display: block;
 }
@@ -248,6 +304,13 @@ a {
   .header__icon--search {
     display: none;
   }
+}
+.header p {
+  color: #999;
+}
+
+.reverse {
+  transform: rotateZ(90deg);
 }
 
 /*# sourceMappingURL=style.css.map */
