--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -87,11 +87,12 @@
 
       /*  positionning  */
       &--menu{
-        position: absolute;
-        top: 20%;
+        position: fixed;
+        top: 0;
         left: 5%;
         width: 80%;
         height: 100%;
+        margin: auto;
         visibility: hidden;
         overflow: hidden;
         display: flex;
@@ -113,10 +114,11 @@
           & > div {
             text-align: left;
             max-width: 90vw;
-            max-height: 80vh;
+            max-height: 80vw;
             margin-bottom: 180px;
             opacity: 0;
             transition: opacity 0.4s ease;
+            margin-left: 30px;
 
             
             h1 {
